--- a/BreakfastEgg/Base.lproj/Main.storyboard
+++ b/BreakfastEgg/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zoi-0x-QJb" userLabel="Title View">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="246.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jaki typ jajek lubisz?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="M9X-vI-ibR" userLabel="Title Label">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jaki typ jajek wybierasz?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="M9X-vI-ibR" userLabel="Title Label">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="246.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -121,24 +121,34 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tuU-65-11x" userLabel="Timer View">
                                         <rect key="frame" x="0.0" y="571.5" width="374" height="246.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TKF-RF-Z5b">
-                                                <rect key="frame" x="10" y="20" width="354" height="206.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="0.01" translatesAutoresizingMaskIntoConstraints="NO" id="a5t-2K-DJZ">
+                                                <rect key="frame" x="0.0" y="120.5" width="374" height="6"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="5" id="ryd-LO-pCA"/>
+                                                </constraints>
+                                                <color key="progressTintColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="trackTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </progressView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jajko na miękko" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ifl-hU-gFn">
+                                                <rect key="frame" x="0.0" y="196" width="374" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="TKF-RF-Z5b" secondAttribute="bottom" constant="20" id="gr6-OD-kHN"/>
-                                            <constraint firstAttribute="trailing" secondItem="TKF-RF-Z5b" secondAttribute="trailing" constant="10" id="hfT-vZ-bA2"/>
-                                            <constraint firstItem="TKF-RF-Z5b" firstAttribute="centerY" secondItem="tuU-65-11x" secondAttribute="centerY" id="qQV-rA-kPS"/>
-                                            <constraint firstItem="TKF-RF-Z5b" firstAttribute="leading" secondItem="tuU-65-11x" secondAttribute="leading" constant="10" id="zoa-XJ-GsA"/>
+                                            <constraint firstAttribute="bottom" secondItem="Ifl-hU-gFn" secondAttribute="bottom" constant="30" id="Nea-Wv-9c2"/>
+                                            <constraint firstItem="Ifl-hU-gFn" firstAttribute="leading" secondItem="tuU-65-11x" secondAttribute="leading" id="Rei-8h-dbN"/>
+                                            <constraint firstAttribute="trailing" secondItem="Ifl-hU-gFn" secondAttribute="trailing" id="ahj-2a-bm5"/>
+                                            <constraint firstAttribute="trailing" secondItem="a5t-2K-DJZ" secondAttribute="trailing" id="g1j-cD-nuu"/>
+                                            <constraint firstItem="a5t-2K-DJZ" firstAttribute="leading" secondItem="tuU-65-11x" secondAttribute="leading" id="ojh-uP-Y53"/>
+                                            <constraint firstItem="a5t-2K-DJZ" firstAttribute="centerY" secondItem="tuU-65-11x" secondAttribute="centerY" id="rTN-lx-sRM"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="0.79607843140000001" green="0.94901960780000005" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.79607843140000001" green="0.94901960780000005" blue="0.6465171741403225" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="ATr-qe-ZT3" secondAttribute="trailing" id="5AB-LH-Fuh"/>
                             <constraint firstItem="ATr-qe-ZT3" firstAttribute="leading" secondItem="C4o-8C-ouz" secondAttribute="leadingMargin" id="Ld3-mo-ecd"/>
@@ -148,7 +158,9 @@
                         <viewLayoutGuide key="safeArea" id="ajr-tz-TeF"/>
                     </view>
                     <connections>
-                        <outlet property="timerLabel" destination="TKF-RF-Z5b" id="RwU-GE-HRd"/>
+                        <outlet property="progressBar" destination="a5t-2K-DJZ" id="y9v-Fe-erK"/>
+                        <outlet property="subtitleLabel" destination="Ifl-hU-gFn" id="ufn-ne-cbb"/>
+                        <outlet property="titleLabel" destination="M9X-vI-ibR" id="d5p-FR-hiN"/>
                         <outletCollection property="collectionOfImages" destination="Uxs-iE-yEE" collectionClass="NSMutableArray" id="hnJ-rM-HA9"/>
                         <outletCollection property="collectionOfImages" destination="PZO-Yr-drN" collectionClass="NSMutableArray" id="lBY-NZ-jPg"/>
                         <outletCollection property="collectionOfImages" destination="J8n-E9-UJd" collectionClass="NSMutableArray" id="iR6-ls-bB3"/>
